--- a/sections/gift-guide-landing.liquid
+++ b/sections/gift-guide-landing.liquid
@@ -1041,7 +1041,7 @@
                         </div>
                     </div>
                     <div class="image-item">
-                        <img src="{{'../assets/images/img_image_835.png'|asset_url}}" alt="Fashion lifestyle 6" />
+                        <img src="{{'mg_image_835.png'|asset_url}}" alt="Fashion lifestyle 6" />
                         <div class="image-overlay overlay-6"
                             data-card-file="long-sleeve-tennis-top-card"></div>
                     </div>
