--- a/sections/gift-guide-landing.liquid
+++ b/sections/gift-guide-landing.liquid
@@ -278,7 +278,7 @@
             right: 52px;
             width: 14px;
             height: 14px;
-            background-image: url('../assets/images/img_group_1000008196.svg');
+            background-image: url('img_group_1000008196.svg');
             background-size: contain;
             background-repeat: no-repeat;
             z-index: 2;
