--- a/sections/gift-guide-landing.liquid
+++ b/sections/gift-guide-landing.liquid
@@ -392,7 +392,7 @@
                 justify-content: flex-start;
                 align-items: center;
                 width: 100%;
-                background-image: url('../assets/images/img_group_1000008197.svg');
+                background-image: url('img_group_1000008197.svg');
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
