--- a/sections/gift-guide-landing.liquid
+++ b/sections/gift-guide-landing.liquid
@@ -141,7 +141,7 @@
 
         .hero-cta-section {
             width: 100%;
-            background-image: url('../assets/images/img_frame.png');
+            background-image: url('{{"img_frame.png" | asset_url}}');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -278,7 +278,7 @@
             right: 52px;
             width: 14px;
             height: 14px;
-            background-image: url('img_group_1000008196.svg');
+            background-image: url('{{"img_group_1000008196.svg" | asset_url}}');
             background-size: contain;
             background-repeat: no-repeat;
             z-index: 2;
@@ -392,7 +392,7 @@
                 justify-content: flex-start;
                 align-items: center;
                 width: 100%;
-                background-image: url('img_group_1000008197.svg');
+                background-image: url('{{"img_group_1000008197.svg" | asset_url}}');
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
