--- a/sections/gift-guide-landing.liquid
+++ b/sections/gift-guide-landing.liquid
@@ -1022,36 +1022,36 @@
           <img src="{{'img_image_830.png'| asset_url}}" alt="Fashion lifestyle 1">
           <div
             class="image-overlay overlay-1"
-            data-card-file="orange-wide-leg"
+            data-card-file="{{'orange-white-leg.html'|asset_url}}"
           ></div>
         </div>
         <div class="image-item">
           <img src="{{'img_image_831.png'|asset_url}}" alt="Fashion lifestyle 2">
           <div
             class="image-overlay overlay-2"
-            data-card-file="tailored-jacket-card"
+            data-card-file="{{'tailored-jacket-card.html'|asset_url}}"
           ></div>
         </div>
         <div class="image-item">
           <img src="{{'img_image_832.png'|asset_url}}" alt="Fashion lifestyle 3">
-          <div class="image-overlay overlay-3" data-card-file="../cards/pages/AccordianPleatedDress.html"></div>
+          <div class="image-overlay overlay-3" data-card-file="{{'accordian-pleated-dress-card.html'|asset_url}}"></div>
         </div>
         <div class="image-item">
           <img src="{{'img_image_833.png'|asset_url}}" alt="Fashion lifestyle 4">
           <div
             class="image-overlay overlay-4"
-            data-card-file="green-trenchcoat-card"
+            data-card-file="{{'green-trench-coat-card.html'|asset_url}}"
           ></div>
         </div>
         <div class="image-item">
           <img src="{{'img_image_834.png' | asset_url}}" alt="Fashion lifestyle 5">
-          <div class="image-overlay overlay-5" data-card-file="tennis-blue-tshirt-card"></div>
+          <div class="image-overlay overlay-5" data-card-file="{{'tennis-blue-tshirt-card.html'|asset_url}}"></div>
         </div>
         <div class="image-item">
           <img src="{{'img_image_835.png'|asset_url}}" alt="Fashion lifestyle 6">
           <div
             class="image-overlay overlay-6"
-            data-card-file="long-sleeve-tennis-top-card"
+            data-card-file="{{'long-sleeve-tennis-top-card.html'|asset_url}}"
           ></div>
         </div>
       </div>
