--- a/layout/gift-guide.liquid
+++ b/layout/gift-guide.liquid
@@ -1,15 +1,9 @@
 <!doctype html>
 <html lang="en">
-  <head>{{ content_for_header }}</head>
+  <head>
+    {{ content_for_header }}
+  </head>
   <body>
-    {{'img_image_824.png' | asset_url}}
-    {{'img_group_1000008134.svg' | asset_url}}
-    {{'img_arrow_down.svg'|asset_url}}
-    {{'img_line_15_white_a700.svg'|asset_url}}
-    {{'img_image_825.png'|asset_url}}
-    {{'img_image_827.png'|asset_url}}
-    {{'img_image_822.png'|asset_url}}
-    {{'img_image_823.png'|asset_url}}
-    {{'img_image_826.png'|asset_url}}
-    {{ content_for_layout }}</body>
+    {{ content_for_layout }}
+  </body>
 </html>
