--- a/layout/gift-guide.liquid
+++ b/layout/gift-guide.liquid
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     {{ content_for_header }}
   </head>
   <body>
